# static/data/swagger.json
@@ -6,6 +6,17 @@
     "version": "1.0.0",
     "title": "API List"
   },
+  "host": "localhost:3000/api",
+  "basePath": "/v1",
+  "tags": [
+  {
+    "name": "log",
+    "description": "Operations about log"
+  },
+  {
+    "name": "visit",
+    "description": "Operations about visit"
+  }],
   "paths":
   {
     "/logs":
@@ -13,7 +24,7 @@
       "get":
       {
         "tags": ["log"],
-        "summary": "Get server logs from mongodb",
+        "summary": "Get logs",
         "description": "",
         "operationId": "getLogs",
         "produces": ["application/json"],
@@ -103,6 +114,122 @@
             "description": "Invalid input"
           }
         }
+      },
+      "post":
+      {
+        "tags": ["log"],
+        "summary": "Add log",
+        "description": "",
+        "operationId": "addLog",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+        {
+          "in": "body",
+          "name": "body",
+          "description": "Log object that needs to be added",
+          "required": true,
+          "schema":
+          {
+            "$ref": "#/definitions/Log"
+          }
+        }],
+        "responses":
+        {
+          "200":
+          {
+            "description": "successful operation",
+            "schema":
+            {
+              "$ref": "#/definitions/Log"
+            }
+          },
+          "405":
+          {
+            "description": "Invalid input"
+          }
+        }
+      },
+      "put":
+      {
+        "tags": ["log"],
+        "summary": "Update log",
+        "description": "",
+        "operationId": "updateLog",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+        {
+          "in": "body",
+          "name": "body",
+          "description": "Log object that needs to be updated",
+          "required": true,
+          "schema":
+          {
+            "$ref": "#/definitions/Log"
+          }
+        }],
+        "responses":
+        {
+          "200":
+          {
+            "description": "successful operation",
+            "schema":
+            {
+              "$ref": "#/definitions/Log"
+            }
+          },
+          "400":
+          {
+            "description": "Invalid ID supplied"
+          },
+          "404":
+          {
+            "description": "Log not found"
+          },
+          "405":
+          {
+            "description": "Validation exception"
+          }
+        }
+      }
+    },
+    "/logs/{id}":
+    {
+      "delete":
+      {
+        "tags": ["log"],
+        "summary": "Delete log",
+        "description": "",
+        "operationId": "deleteLog",
+        "produces": ["application/json"],
+        "parameters": [
+        {
+          "name": "id",
+          "in": "path",
+          "description": "Log id to delete",
+          "required": true,
+          "type": "string"
+        }],
+        "responses":
+        {
+          "200":
+          {
+            "description": "successful operation",
+            "schema":
+            {
+              "$ref": "#/definitions/Log"
+            }
+          },
+          "400":
+          {
+            "description": "Invalid ID supplied"
+          },
+          "404":
+          {
+            "description": "Log not found"
+          }
+        }
       }
     },
     "/visits":
@@ -110,7 +237,7 @@
       "get":
       {
         "tags": ["visit"],
-        "summary": "Get user visits from mongodb",
+        "summary": "Get user visits",
         "description": "",
         "operationId": "getVisits",
         "produces": ["application/json"],
